--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Christopher Brefo" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://ChristopherBrefo.com" />
+        <meta property="og:url" content="https://ChristopherBrefo.dev" />
         <meta property="og:description" content="Personal Website of Christopher Brefo." />
         <meta name="author" content="Christopher Brefo">
     </head>
@@ -47,7 +47,7 @@
 						<tr>
 							<td><a title = "About" id = "At" href = "#About" onclick = "show();"> About </a></td>
 							<td><a  title = "Projects"  id = "projects" href = "#Projects" onclick= "show2()"> Projects </a></td>
-							<td><a  title = "Resume"  id = "resume" target = "_blank" href = "resume.pdf"> Resume </a></td>
+							<td><a  title = "Resume"  id = "resume" target = "_blank" href = "Resume.pdf"> Resume </a></td>
 						</tr>
 					</div>
 					<div id = "social-Media-Tabs" style = "text-shadow: 1px 1px 1px gray;">
