--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<tr>
 							<td><a title = "About" id = "At" href = "#About" onclick = "show();"> About </a></td>
 							<td><a  title = "Projects"  id = "projects" href = "#Projects" onclick= "show2()"> Projects </a></td>
-							<td><a  title = "Resume"  id = "resume" target = "_blank" href = "Resume.pdf"> Resume </a></td>
+							<td><a  title = "Resume"  id = "resume" target = "_blank" href = "https://chrisbrefoga.github.io/resume.pdf"> Resume </a></td>
 						</tr>
 					</div>
 					<div id = "social-Media-Tabs" style = "text-shadow: 1px 1px 1px gray;">
