--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div id = "redirect-Tabs" style = " font-family: 'Playfair Display', serif; text-shadow: 1px 1px 1px gray;">
 						<tr>
 							<td><a title = "About" id = "At" href = "#About" onclick = "show();"> About </a></td>
-							<td><a  title = "Projects"  id = "projects" href = "#Projects" onclick= "show2()"> Projects </a></td>
+							<td><a  title = "Projects"  id = "projects" href = "#Projects" onclick= "show2()" style = "display:none;"> Projects </a></td>
 							<td><a  title = "Resume"  id = "resume" target = "_blank" href = "https://chrisbrefoga.github.io/resume.pdf"> Resume </a></td>
 						</tr>
 					</div>
