--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<img class="Ppic" src="FacePhotos/WP.jpg"/>
 					<img class="Ppic" src="FacePhotos/WS.jpg"/>
 					<div style = "margin-top:-125px; width:100%">
-						<p id = "name" style = "text-shadow: 1px 1px 1px gray;font-family: 'Playfair Display', serif; ">Christopher Brefo </p>
+						<p id = "name" style = "text-shadow: 1px 1px 1px gray;font-family: 'Playfair Display', serif; font-size: 100px;">Christopher Brefo </p>
 					</div>
 					<div id = "redirect-Tabs" style = " font-family: 'Playfair Display', serif; text-shadow: 1px 1px 1px gray;">
 						<tr>
