--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 					<img class="Ppic" src="FacePhotos/CS.jpg"/>
 					<img class="Ppic" src="FacePhotos/WP.jpg"/>
 					<img class="Ppic" src="FacePhotos/WS.jpg"/>
-					<div style = "margin-top:-125px; width:100%;font-size: 50px;">
-						<p id = "name" style = "text-shadow: 1px 1px 1px gray;font-family: 'Playfair Display', serif; ">Christopher Brefo </p>
+					<div id = "name" style = "margin-top:-125px; width:100%;font-size: 100px;">
+						<p  style = "text-shadow: 1px 1px 1px gray;font-family: 'Playfair Display', serif; ">Christopher Brefo </p>
 					</div>
 					<div id = "redirect-Tabs" style = " font-family: 'Playfair Display', serif; text-shadow: 1px 1px 1px gray;">
 						<tr>
