--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<img class="Ppic" src="FacePhotos/CS.jpg"/>
 					<img class="Ppic" src="FacePhotos/WP.jpg"/>
 					<img class="Ppic" src="FacePhotos/WS.jpg"/>
-					<div id = "name" style = "margin-top:-125px; width:100%;font-size: 100px;">
+					<div id = "name" style = "width:100%; font-size: 100px;">
 						<p  style = "text-shadow: 1px 1px 1px gray;font-family: 'Playfair Display', serif; ">Christopher Brefo </p>
 					</div>
 					<div id = "redirect-Tabs" style = " font-family: 'Playfair Display', serif; text-shadow: 1px 1px 1px gray;">
