--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
     <body>
 		<div id = "intro" >
 			<div id = "introText" style = "text-align:center;">
-					<img class="Ppic" src="FacePhotos/CS.jpg"/>
-					<img class="Ppic" src="FacePhotos/WP.jpg"/>
-					<img class="Ppic" src="FacePhotos/WS.jpg"/>
-					<div id = "name" style = "width:100%; font-size: 100px;">
-						<p  style = "text-shadow: 1px 1px 1px gray;font-family: 'Playfair Display', serif; ">Christopher Brefo </p>
+					<div class = "picContainer" style = "width: 100%;">
+						<img class="Ppic" src="FacePhotos/CS.jpg"/>
+						<img class="Ppic" src="FacePhotos/WP.jpg"/>
+						<img class="Ppic" src="FacePhotos/WS.jpg"/>
+					</div>
+					<div id = "name" style = " width:100%;">
+						<p  style = "text-shadow: 1px 1px 1px gray;font-family: 'Playfair Display', serif; font-size: 7vw;">Christopher Brefo </p>
 					</div>
 					<div id = "redirect-Tabs" style = " font-family: 'Playfair Display', serif; text-shadow: 1px 1px 1px gray;">
 						<tr>
@@ -72,39 +74,11 @@
 					</p>
 				</div>
 		</div>
-		<div id ="Projects" style= "display:none;">
-			<div class = "project-container">
-				<div class = "project-card">
-					<div class = "project-info">
-						<div class = "title" style = "gird-area: title;">
-							Battleship
-						</div>
-						<div class = "info"style = "grid-area: info;">
-							<p style = "text-align: left; font-family: 'Playfair Display', serif;">
-								I am currently a senior undergraduate at Rutgers University.qwilefljasbdljabsldfjbalsj bdfljbas ddljfbasjldbfl jasbdlfjbasl dbfljabsddjl fbasljdfblja sbfjasdfbl basjlfa bsjfdlas bflja bsfldjba sjlfba
-								ajsf dasjldfb aljsbdfl jabsdljfas dljfbla sjdfasd
-								afbjjabjs ldfb lasbdf labsdd ljfb sjldfbl jasbdfljas bjlfbajlsdbflja sbfdljbasdljfbal jsbdfljabsdf ljbasljfbas
-							</p>
-						</div>
-						<div class = "photo" style = "grid-area: picture;">
-							<img src="Bship.jpg" style= "height:220px; width:220px; border-radius:10%;" />
-						</div>
-						<div class = "link" style = "grid-area: link;">
-							link
-						</div>
-					</div>
-				</div>
-				<div class = "project-card">
-					<div>
-					Cache Simulator
-					</div>
-				</div>
-			</div>
 		</div>
 		<div id = "sendUp" style= "display:none;">
 			<a href = "#intro" onclick="hide()"> <i class = "fas fa-lg fa-chevron-up"></i> </a>
 		</div>
-		<footer id = "footerBox" style = "max-width:100%;text-align:center; background-color: black; height: 50px; color: white; padding-top:10px;">
+		<footer id = "footerBox" style = "width:100%;text-align:center; background-color: black; height:auto; color: white; padding-top:10px;">
 			I appreciate you taking the time to learn more about me, and I hope you enjoyed your time here.
 		</footer>
     </body>
