--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
     <body>
 		<div id = "intro" >
 			<div id = "introText" style = "text-align:center;">
-					<div class = "picContainer" style = "width: 100%;">
 						<img class="Ppic" src="FacePhotos/CS.jpg"/>
 						<img class="Ppic" src="FacePhotos/WP.jpg"/>
 						<img class="Ppic" src="FacePhotos/WS.jpg"/>
-					</div>
 					<div id = "name" style = " width:100%;">
-						<p  style = "text-shadow: 1px 1px 1px gray;font-family: 'Playfair Display', serif; font-size: 7vw;">Christopher Brefo </p>
+						<p  style = "text-shadow: 1px 1px 1px gray;font-family: 'Playfair Display', serif;">Christopher Brefo </p>
 					</div>
 					<div id = "redirect-Tabs" style = " font-family: 'Playfair Display', serif; text-shadow: 1px 1px 1px gray;">
 						<tr>
