--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<img class="Ppic" src="FacePhotos/WP.jpg"/>
 						<img class="Ppic" src="FacePhotos/WS.jpg"/>
 					<div id = "name" style = " width:100%;">
-						<p  style = "text-shadow: 1px 1px 1px gray;font-family: 'Playfair Display', serif;">Christopher Brefo </p>
+						Christopher Brefo 
 					</div>
 					<div id = "redirect-Tabs" style = " font-family: 'Playfair Display', serif; text-shadow: 1px 1px 1px gray;">
 						<tr>
@@ -71,7 +71,6 @@
 					afbjjabjs ldfb lasbdf labsdd ljfb sjldfbl jasbdfljas bjlfbajlsdbflja sbfdljbasdljfbal jsbdfljabsdf ljbasljfbas
 					</p>
 				</div>
-		</div>
 		</div>
 		<div id = "sendUp" style= "display:none;">
 			<a href = "#intro" onclick="hide()"> <i class = "fas fa-lg fa-chevron-up"></i> </a>
