--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<div id = "sendUp" style= "display:none;">
 			<a href = "#intro" onclick="hide()"> <i class = "fas fa-lg fa-chevron-up"></i> </a>
 		</div>
-		<footer id = "footerBox" style = "width:100%;text-align:center; background-color: black; height:auto; color: white; padding-top:10px;">
+		<footer id = "footerBox">
 			I appreciate you taking the time to learn more about me, and I hope you enjoyed your time here.
 		</footer>
     </body>
