--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:700&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:800&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans|Oswald&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <title>Christopher Brefo</title>
         <meta charset="UTF-8">
@@ -40,13 +41,13 @@
 						<img class="Ppic" src="FacePhotos/CS.jpg"/>
 						<img class="Ppic" src="FacePhotos/WP.jpg"/>
 						<img class="Ppic" src="FacePhotos/WS.jpg"/>
-					<div id = "name" style = " width:100%;">
+					<div id = "name" >
 						Christopher Brefo 
 					</div>
 					<div id = "redirect-Tabs" style = " font-family: 'Playfair Display', serif; text-shadow: 1px 1px 1px gray;">
 						<tr>
 							<td><a title = "About" id = "At" href = "#About" onclick = "show();"> About </a></td>
-							<td><a  title = "Resume"  id = "resume" target = "_blank" href = "https://chrisbrefoga.github.io/resume.pdf"> Resume </a></td>
+							<td><a  title = "Resume"  id = "resume" target = "_blank" href = "https://chrisbrefoga.github.io/Resume.pdf"> Resume </a></td>
 						</tr>
 					</div>
 					<div id = "social-Media-Tabs" style = "text-shadow: 1px 1px 1px gray;">
@@ -62,21 +63,24 @@
 		</div>
 		<div id ="About" style= "display:none;">
 				<div id = "aboutMe">
-					<h2 style = "text-align: center; font-family: 'Playfair Display', serif; font-size: 50px;">
-					About me
+					<h2 style = "text-align: center; font-family: 'Noto Sans', sans-serif; font-size: 40px;">
+					About Me
 					</h2>				
-					<p style = "text-align: left; font-family: 'Playfair Display', serif; font-size: 20px;">
-					I am currently a senior undergraduate at Rutgers University.qwilefljasbdljabsldfjbalsj bdfljbas ddljfbasjldbfl jasbdlfjbasl dbfljabsddjl fbasljdfblja sbfjasdfbl basjlfa bsjfdlas bflja bsfldjba sjlfba
-					ajsf dasjldfb aljsbdfl jabsdljfas dljfbla sjdfasd
-					afbjjabjs ldfb lasbdf labsdd ljfb sjldfbl jasbdfljas bjlfbajlsdbflja sbfdljbasdljfbal jsbdfljabsdf ljbasljfbas
+					<p style = "text-align: center; font-family: 'Noto Sans', sans-serif; font-size: 20px;">
+					I am currently a senior undergraduate at Rutgers University pursuing my bachelors degree in computer science.
+					</p>
+					<br>
+					<p style = "text-align: center; font-family: 'Noto Sans', sans-serif; font-size: 20px;">
+					Ever since I was a kid I knew that I wanted to do something in the technology field, because I always had a passion for technology of all kinds.
+					Like most kids it started out with video games and computers, then as times changed it moved on to mp3 players, iPods, and smartphones.
 					</p>
 				</div>
 		</div>
-		<div id = "sendUp" style= "display:none;">
+		<div id = "sendUp" style= "display:none; font-family: 'Playfair Display', serif;">
 			<a href = "#intro" onclick="hide()"> <i class = "fas fa-lg fa-chevron-up"></i> </a>
 		</div>
 		<footer id = "footerBox">
-			I appreciate you taking the time to learn more about me, and I hope you enjoyed your time here.
+			“It is hard to fail, but it is worse never to have tried to succeed.” ― Theodore Roosevelt
 		</footer>
     </body>
 </html>
