final touches on About Me

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					About Me
 					</h2>				
 					<p style = "text-align: center; font-family: 'Noto Sans', sans-serif; font-size: 20px;">
-					I am currently a senior undergraduate at Rutgers University pursuing my bachelors degree in computer science.
+					I am currently a senior undergraduate at Rutgers University pursuing my Bachelors degree in Computer Science.
 					</p>
 					<br>
 					<p style = "text-align: center; font-family: 'Noto Sans', sans-serif; font-size: 20px;">
@@ -77,15 +77,16 @@
 					etc. really worked. Unfortunately, as a kid I always left them as just curiosities and never used the internet to dissect just how they worked. At the same time, none of the schools that I went to from K-12th grade had any computer science courses.
 					It wasn't until my Junior year of high school that I decided to look up exactly how some of my favorite video games were made, and that's how I found out about the profession of computer science. 
 					Over the next few years as I did more research on computer science I just knew that it was the right job for me, because not only was it something that could be used in almost every single aspect of life, 
-					but I knew it would also be something that would mentally challenge me for the rest of my life. Unfortunately, I knew I was beginning my journey into computer science a lot later then some people, but I didn't let it deter me from pursuing my new found passion.
-					Something my parents instilled in me as a child was that I can't compare myself to everybody else because my situation isn't supposed to be the same as somebody else's situation, and my timing isn't supposed to be the same as somebody else's timing. 
-					So, as long as I put in the hard work and the effort to get where I want to go and I will accomplish it no matter what. 
+					but I knew it would also be something that would mentally challenge me for the rest of my life. Unfortunately, I knew I was beginning my journey into computer science a lot later then many people, 
+					but I didn't let it deter me from pursuing my new found passion. Coming from a religious background I know that God knows the plans he has for me and that when the time comes I will find the right fit for me. At the same time, 
+					something my parents instilled in me as a child was that I can't compare myself to everybody else because my situation isn't supposed to be the same as somebody else's situation, 
+					and my timing isn't supposed to be the same as somebody else's timing. So, as long as I put in the hard work and effort to get where I want to go I will accomplish it no matter what. 
 					</p>
 					<br>
 					<p style = "text-align: center; font-family: 'Noto Sans', sans-serif; font-size: 20px;">
 					When I'm not doing something computer science related then I'm doing one of five things. I'm either hanging out with my friends or relaxing with my roommates, 
 					Working my shift at my on campus job, playing video games, going to the gym, or producing music in Fruit Loops A.K.A FL studio because music is also my second passion. I've been playing the Trumpet since I was 10 years old, 
-					playing the piano since I was 16, and started my new hobby of producing music, that I've started taking more seriously, at the beginning of last year.		
+					playing the Piano since I was 16, and started my new hobby of producing music, that I've started taking more seriously, at the beginning of last year.		
 					</p>
 				</div>
 		</div>
