--- a/index.html
+++ b/index.html
@@ -67,26 +67,30 @@
 					About Me
 					</h2>				
 					<p style = "text-align: center; font-family: 'Noto Sans', sans-serif; font-size: 20px;">
-					I am currently a senior undergraduate at Rutgers University pursuing my Bachelors degree in Computer Science.
+					I am currently a senior undergraduate student at Rutgers University pursuing my Bachelor's degree in Computer Science.
 					</p>
 					<br>
 					<p style = "text-align: center; font-family: 'Noto Sans', sans-serif; font-size: 20px;">
-					Ever since I was a kid I knew that my dream job had to be a job that not only would I love, but a job that would also mentally challenge me enough everyday, so that I didn't eventually get bored with it.
-					I didn't specifically know what that job would be, but I knew it had to be something that followed those criterias. As a kid I always had a passion for technology of all kinds. Like most kids it started out with video games and computers, 
-					then as times changed it moved on to mp3 players, iPods, and smartphones. But the one thing that never changed throughout those years was my curiosity for how these computers, consoles, online games,
-					etc. really worked. Unfortunately, as a kid I always left them as just curiosities and never used the internet to dissect just how they worked. At the same time, none of the schools that I went to from K-12th grade had any computer science courses.
-					It wasn't until my Junior year of high school that I decided to look up exactly how some of my favorite video games were made, and that's how I found out about the profession of computer science. 
-					Over the next few years as I did more research on computer science I just knew that it was the right job for me, because not only was it something that could be used in almost every single aspect of life, 
-					but I knew it would also be something that would mentally challenge me for the rest of my life. Unfortunately, I knew I was beginning my journey into computer science a lot later then many people, 
-					but I didn't let it deter me from pursuing my new found passion. Coming from a religious background I know that God knows the plans he has for me and that when the time comes I will find the right fit for me. At the same time, 
-					something my parents instilled in me as a child was that I can't compare myself to everybody else because my situation isn't supposed to be the same as somebody else's situation, 
-					and my timing isn't supposed to be the same as somebody else's timing. So, as long as I put in the hard work and effort to get where I want to go I will accomplish it no matter what. 
+					Ever since I was a kid, I knew that my dream job had to be a job that not only would I love, but a job that would also mentally challenge me enough everyday so that I never got bored with it. 
+					I didn't specifically know what that job would be, but I knew it had to be something that followed that criteria. As a child, I always had a passion for technology of all kinds. 
+					Like most kids, it started out with video games and computers, which progressed to mp3 players, iPods, and smartphones. Even though the technology changed, 
+					what never changed was my curiosity for how these computers, consoles, online games, etc. really worked. Unfortunately, when I was younger, 
+					I always left them as just curiosities and never used the internet to dissect just how they worked. At the same time, none of the schools that I went to from K-12th grade had any computer science courses. 
+					It wasn't until my Junior year of high school that I decided to look up exactly how some of my favorite video games were made, and that's how I found out about the profession of computer science.
+					</p>
+					<p style = "text-align: center; font-family: 'Noto Sans', sans-serif; font-size: 20px;">
+					As I did more research on computer science over the years, I just knew that it was the right job for me. Not only was it something that could be used in almost every single aspect of life, 
+					but I knew it would also be something that would mentally challenge me for the rest of my life. Although I knew I was beginning my journey into computer science a lot later then many people, 
+					I didn't let it deter me from pursuing my newfound passion. Coming from a religious background, I know that God knows the plans he has for me and that when the time comes, I will find the right fit for me. 
+					At the same time, something my parents instilled in me as a child was that I can't compare myself to everybody else because my situation isn't supposed to be the same as somebody else's situation, and my timing isn't supposed to be the same as somebody else's timing. 
+					Since I am willing to put in the hard work and effort to get where I want to go, I look forward to accomplishing whatever I set my mind to.
 					</p>
 					<br>
 					<p style = "text-align: center; font-family: 'Noto Sans', sans-serif; font-size: 20px;">
-					When I'm not doing something computer science related then I'm doing one of five things. I'm either hanging out with my friends or relaxing with my roommates, 
-					Working my shift at my on campus job, playing video games, going to the gym, or producing music in Fruit Loops A.K.A FL studio because music is also my second passion. I've been playing the Trumpet since I was 10 years old, 
-					playing the Piano since I was 16, and started my new hobby of producing music, that I've started taking more seriously, at the beginning of last year.		
+					When I'm not doing something computer science related, I'm doing one of five things. I'm either hanging out with my friends or relaxing with my roommates, 
+					working my shift at my on campus job Kite+Key, where I help students, faculty, and staff find the right electronics such as laptops, tablets, and monitors and/or accessories such as headphones, chargers, and watches to suit their needs. 
+					I'm also either playing video games, going to the gym, or producing music in Fruit Loops A.K.A FL studio because music is also my second passion. 
+					I've been playing the Trumpet since I was 10 years old, playing the Piano since I was 16, and started producing music, which I began to take more seriously this following year. 
 					</p>
 				</div>
 		</div>
